CHANGELOG for Fall of Eden
--------------------------

--------------------------------------------
                  CURRENT
--------------------------------------------

Version 0.3y
------------
* Fixed a bug that showed up on firefox where the game wouldn't load.
* Fixed Terry's pregnancy getting reset on save/load.
* Did some refactoring on the farm, removing the Loiter scene and cleaning up the intro a bit.
* Layla added to farm (missing pics!). You need to defeat Orchid before you can meet her.

--------------------------------------------
             PREVIOUS VERSIONS
--------------------------------------------

Version 0.3x2
-------------
* Fixed a bug in Zebra shaman encounter.
* Terry's pet option now has a back button.
* Terry now has a lick pussy sex option (should help out with that soft lock problem) written by LD & QB.
* Fixed some bugs in defeated Lagon. Deny should work properly now, and sex stats should be saved.

Version 0.3x
------------
* Zebra shaman encounter added to highlands, written by Bluebusterman. Current scenes:
 - Win, Fuck him
* Completely refactored out use of old Text.AddOutput and Text.Newline. It's possible that this might have some adverse effects. Holler if there are suddenly blank screens or missing text somewhere.
* Made a full rewrite to image preloading code that should hopefully help with the loader freezing on 86/88 or similar. Holler if the issue still persists
* New Terry scene by QB and LD:
 - Pet: Kiss
* You can now interact with the defeated Lagon (written by QB and LD):
 - You can Fuck him if you have a cock/strapon

Version 0.3w2
-------------
* Fixed broken Vena restoration (doesn't loop anymore).
* Removed ability for Lagon to impregnate your butt.
* Fixed a bug that gave Terry perpeptual pregnancy.
* Fixed a bug that would break talking to Lagon when you had sided with him.

Version 0.3w
------------