@@ -475,6 +475,11 @@ Scenes.Mothgirl.WinCunn = function(enc) {
 	Text.NL();
 	Text.Add("You slowly remove your [armor], giving the moth a good look at your slavering cunt. She makes a show of trying to pull away, but as soon as you grab her head and push it between your legs, her passions stirr from rebellion to eager submission. Your body quakes with pleasure as her long, thick tongue rolls out of her mouth, teasing up along the lips of your slit. Her big, red eyes look up at you, holding your gaze as the tip of her tongue flicks across your [clit], sending an electric shock of pleasure through you. Her simplest motions make you shudder with excitement, and you push her face further into your muff, smearing your lust across her nose.", parse);
 	Text.NL();
+	
+	Sex.Cunnilingus(moth, player);
+	moth.Fuck(null, 2);
+	player.Fuck(null, 2);
+	
 	Text.Add("The moth-girl sputters as she's submerged in your juices, lips locking with your pussy's as her tongue is pushed through the tight-clenched slit of your [cunt]. The way she moves her tongue, it's like a wet, writhing tentacle spreading your vaginal walls wide, wriggling its way through the chasm of your womanhood. Biting your lip, you spread yourself out with your fingers, easing the mother's intrusion; she takes the opportunity to push in hard and fast, wrapping her tongue through to the lips of your womb, grabbing your [butt] to pull you in on her. You gasp as the moth pulls just a little too hard: unsteady as you are, a little force is all it takes to send you toppling down atop her, rolling with the bug through the grass until the two of you come to a standstill, straddling her big hips. She stares up at you expectantly, lips pursed over the tip of her long tongue, awaiting your pleasure.", parse);
 	Text.NL();
 	Text.Add("A tempting thought crosses your mind. Reaching down, you plant a hand overtop both of the moth-girl's breasts, squeezing her cherry-pink nipples between thumb and forefinger until she gives a pathetic little cry, writhing underneath you. A few tender caresses have her inverted points rising to meet you, peeking out of their hiding holes eager for you to pinch and pull them. Seeing where this is going, the moth-girl puts aside her wanton lust just long enough to shimmy out of her pants, hiking them down around her knees and leaving the slick slit of her sex bare to you, eager for your ministration.", parse);
@@ -494,6 +499,9 @@ Scenes.Mothgirl.WinCunn = function(enc) {
 	Text.NL();
 	Text.Add("Her tongue slips back from one set of lips and down to the other, making you squirm with a shuddering delight as the shaft of her tongue slithers past your spread pussylips and into the deep channel of your sex. You bite your lip and hold on for the ride, bucking your hips back as her tongue worms in like a thick, wet tentacle, ceaselessly rubbing and caressing your most sensitive spots. Unconsciously, you feel your hands slipping back down to the moth's ample bust, cupping the full swells of her breasts and giving them a playful squeeze. Her back arches as your twist her teats, squeezing and kneading her tits until a bright red flush spreads through her body, chest heaving as pleasure takes hold of her. You're not far behind her, hips bucking back against her tongue, using it like a thick, writhing cock to get yourself off on, and liberally drenching the moth's face and chest with your flowing juices as you do so.", parse);
 	Text.NL();
+	
+	var cum = player.OrgasmCum();
+	
 	Text.Add("<i>“Ooooohhhhhhh,”</i> the moth-girl coos, squirming in your relentless grasp, crying out as you molest her expansive bust. As her pleasure mounts, it's as if she loses control of her tongue: the muscle goes wild inside you, thrashing inside you like a firehose, fucking its way so deep inside you can feel its tip kissing the entrance of your womb. You throw your head back, thrusting your hips down hard in return and letting your body take control, mind fading in response to the pleasure of your lovemaking. The moth joins you in orgasm - or rather, boobgasm - screaming around her extended tongue as she cums, tongue ramming so far into your [cunt] that you could swear you can feel your stomach bulging in its wake.", parse);
 	Text.NL();
 	Text.Add("When you come to your senses, you find yourself rolled on your back beside the moth-girl, panting hard. She grins at you, <i>“You really know how to go right for a girl's weak spot, huh?”</i> she giggles. You cock an eyebrow at the thief, seeing her grinning dumbly as her long tongue laps your fem-spunk off the tops of her breasts, happily sucking up your juices. For someone who just lost a fight, she's sure happy about it. For your part, you grab your gear before staggering off, leaving her to enjoy her cum-soaked afterglow.", parse);
