@@ -9,8 +9,11 @@ Version 0.3y
 ------------
 * Fixed a bug that showed up on firefox where the game wouldn't load.
 * Fixed Terry's pregnancy getting reset on save/load.
-* Did some refactoring on the farm, removing the Loiter scene and cleaning up the intro a bit.
-* Layla added to farm (missing pics!). You need to defeat Orchid before you can meet her.
+* Did some refactoring on the farm, removing the Loiter scene and cleaning up the intro a bit. More will be done here at a later date.
+* Layla added to farm. You need to defeat Orchid before you can meet her.
+ - If you choose to take her, you can return after three days. If you don't, she's not intended to disappear, but right now she has no content on the farm.
+ - Once you pick her up, she only has very basic follower interactions, including a huge first-time sex and a repeatable sex scene.
+* Mothgirl oral now correctly gives xp and lust reduction.
 
 --------------------------------------------
              PREVIOUS VERSIONS
